feat: 增加模块和命令相关的功能和优化实现