@@ -1,5 +1,6 @@
 package cn.langya.command;
 
+import cn.langya.Logger;
 import cn.langya.utils.InitializerUtil;
 import lombok.Getter;
 
@@ -7,45 +8,56 @@ import java.util.HashMap;
 import java.util.Map;
 
 /**
+ * 命令管理器类，负责管理和执行命令
  * @author LangYa
  * @since 2024/11/19 22:35
  */
 @Getter
 public class CommandManager {
-    private final Map<String,Command> commandMap;
+    private final Map<String, Command> commandMap = new HashMap<>();
 
+    /**
+     * 构造函数，初始化命令管理器
+     */
     public CommandManager() {
-        this.commandMap = new HashMap<>();
-
         init();
     }
 
+    /**
+     * 添加命令到命令映射表
+     * @param command 要添加的命令
+     */
     public void addCommand(Command command) {
-        this.commandMap.put(command.getName(), command);
+        commandMap.put(command.getName(), command);
     }
 
+    /**
+     * 初始化命令管理器，加载所有命令
+     */
     public void init() {
         InitializerUtil.initialize(clazz -> {
-            if (!InitializerUtil.check(Command.class,clazz)) return;
-            try {
-                Command cInstance = (Command) clazz.newInstance();
-                addCommand(cInstance);
-            } catch (InstantiationException | IllegalAccessException e) {
-                e.printStackTrace();
+            if (InitializerUtil.check(Command.class, clazz)) {
+                try {
+                    addCommand((Command) clazz.getDeclaredConstructor().newInstance());
+                } catch (Exception e) {
+                    Logger.error("Failed to initialize command: ",e);
+                }
             }
         }, this.getClass());
     }
 
+    /**
+     * 执行指定的命令
+     * @param message 包含命令的消息
+     * @return true 如果命令成功执行，false 如果命令不存在
+     */
     public boolean runCommand(String message) {
-        String[] args = message.split(" ");
-        String commandName = args[0].replace(".","");
-        for (Command command : commandMap.values()) {
-            if (command.getName().equals(commandName)) {
-                command.run(args);
-                return true;
-            }
+        String commandName = message.split(" ")[0].replace(".", "");
+        Command command = commandMap.get(commandName);
+        if (command != null) {
+            command.run(message.split(" "));
+            return true;
         }
-
         return false;
     }
 }
