@@ -1,6 +1,7 @@
 package cn.langya.module;
 
 import cn.langya.Client;
+import cn.langya.Logger;
 import cn.langya.event.annotations.EventTarget;
 import cn.langya.event.events.EventKeyInput;
 import cn.langya.utils.InitializerUtil;
@@ -10,49 +11,49 @@ import java.util.HashMap;
 import java.util.Map;
 
 /**
+ * Manages all modules and their interactions.
+ *
  * @author LangYa
  * @since 2024/11/16 03:46
  */
 @Getter
 public class ModuleManager {
-    private final Map<String,Module> moduleMap;
+    private final Map<String, Module> moduleMap = new HashMap<>();
 
     public ModuleManager() {
-        this.moduleMap = new HashMap<>();
-
         init();
     }
 
     public void addModule(Module module) {
-        this.moduleMap.put(module.getName(), module);
+        moduleMap.put(module.getName(), module);
     }
 
     public Module getModule(String moduleName) {
         return moduleMap.get(moduleName);
     }
 
-    public Module getModule(Class<?> moduleClazz) {
-        return moduleMap.get(moduleClazz.getSimpleName());
+    public Module getModule(Class<?> moduleClass) {
+        return moduleMap.get(moduleClass.getSimpleName());
     }
 
-    public void init() {
+    private void init() {
         InitializerUtil.initialize(clazz -> {
-            if (!InitializerUtil.check(Module.class,clazz)) return;
-            try {
-                Module mInstance = (Module) clazz.newInstance();
-                addModule(mInstance);
-            } catch (InstantiationException | IllegalAccessException e) {
-                e.printStackTrace();
+            if (InitializerUtil.check(Module.class, clazz)) {
+                try {
+                    addModule((Module) clazz.getDeclaredConstructor().newInstance());
+                } catch (ReflectiveOperationException e) {
+                    Logger.error("Registration module {} failed",e);
+                }
             }
-        }, this.getClass());
+        }, getClass());
 
         Client.getInstance().getEventManager().register(this);
     }
 
     @EventTarget
     public void onKeyInput(EventKeyInput event) {
-        for (Module module : moduleMap.values()) {
-            if (module.getKeyCode() == event.getKeyCode()) module.toggle();
-        }
+        moduleMap.values().stream()
+                .filter(module -> module.getKeyCode() == event.getKeyCode())
+                .forEach(Module::toggle);
     }
 }
